--- a/index.html
+++ b/index.html
@@ -1,25 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Preço de Venda</title>
+    <title>Jogo do Tigrinho</title>
+    <style>
+        #gameArea {
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        .symbol {
+            width: 100px;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-    <h2>Calculadora de Preço de Venda de Brigadeiros</h2>
-    <form id="calculatorForm">
-        Custo dos ingredientes: R$ <input type="number" id="custo_ingredientes"><br><br>
-        Custo da embalagem: R$ <input type="number" id="custo_embalagem"><br><br>
-        Custo de energia: R$ <input type="number" id="custo_energia"><br><br>
-        Outros custos: R$ <input type="number" id="outros_custos"><br><br>
-        Quantidade de brigadeiros: <input type="number" id="quantidade_brigadeiros"><br><br>
-        Margem de lucro (%): <input type="number" id="margem_lucro"><br><br>
-        <button type="button" onclick="calcular()">Calcular</button>
-    </form>
-    <h3>Resultados:</h3>
-    <p>Custo por brigadeiro: R$ <span id="custo_por_brigadeiro">0.00</span></p>
-    <p>Preço de venda sugerido por brigadeiro: R$ <span id="preco_venda">0.00</span></p>
+    <div id="gameArea">
+        <!-- 9 símbolos na grade 3x3 -->
+        <div class="symbol" id="s0"></div>
+        <div class="symbol" id="s1"></div>
+        <div class="symbol" id="s2"></div>
+        <div class="symbol" id="s3"></div>
+        <div class="symbol" id="s4"></div>
+        <div class="symbol" id="s5"></div>
+        <div class="symbol" id="s6"></div>
+        <div class="symbol" id="s7"></div>
+        <div class="symbol" id="s8"></div>
+    </div>
 
-    <script src="script.js"></script>
+    <button onclick="startGame()">Iniciar Jogo</button>
+    <button onclick="toggleTurbo()">Modo Turbo</button>
+    <button onclick="autoPlay()">Modo Automático</button>
+
+    <script>
+        const symbols = ["Laranja", "Sino Azul", "Envelope Vermelho", "Saco de Moedas", "Adorno Jade", "Enfeite Dourado", "Wild"];
+        const payouts = [3, 5, 8, 10, 25, 100, 250];
+        let turboMode = false;
+
+        function getRandomSymbol() {
+            return symbols[Math.floor(Math.random() * symbols.length)];
+        }
+
+        function startGame() {
+            for (let i = 0; i < 9; i++) {
+                document.getElementById(`s${i}`).innerText = getRandomSymbol();
+            }
+            checkWin();
+        }
+
+        function checkWin() {
+            // Verificar combinações vencedoras (simplificado)
+            for (let i = 0; i < 3; i++) {
+                if (document.getElementById(`s${i*3}`).innerText === document.getElementById(`s${i*3 + 1}`).innerText &&
+                    document.getElementById(`s${i*3}`).innerText === document.getElementById(`s${i*3 + 2}`).innerText) {
+                    alert(`Você ganhou com ${document.getElementById(`s${i*3}`).innerText} na linha ${i+1}!`);
+                }
+            }
+        }
+
+        function toggleTurbo() {
+            turboMode = !turboMode;
+            alert(turboMode ? "Modo Turbo Ativado!" : "Modo Turbo Desativado!");
+        }
+
+        function autoPlay() {
+            const rounds = prompt("Quantas rodadas automáticas você deseja?", "10");
+            for (let i = 0; i < rounds; i++) {
+                setTimeout(() => {
+                    startGame();
+                }, turboMode ? 500 : 1000 * i);
+            }
+        }
+    </script>
 </body>
 </html>
