--- a/index.html
+++ b/index.html
@@ -5,20 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo do Tigrinho</title>
     <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 50px;
+        }
+
         #gameArea {
             display: grid;
             grid-template-columns: repeat(3, 100px);
-            gap: 10px;
+            gap: 15px;
             margin-bottom: 20px;
+            border: 3px solid #333;
+            padding: 15px;
+            border-radius: 10px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
         .symbol {
             width: 100px;
             height: 100px;
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 1px solid black;
+            border: 1px solid #ddd;
+            border-radius: 10px;
             font-size: 24px;
+            background-color: #f9f9f9;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #333;
+            color: #fff;
+            cursor: pointer;
+            margin: 5px;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #555;
+        }
+
+        input[type="number"] {
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+
+        div {
+            margin-bottom: 20px;
         }
     </style>
 </head>
