--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding-top: 50px;
+            padding-top: 20px;
+        }
+
+        h1 {
+            color: #333;
+            background-color: #fff;
+            padding: 10px 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+            font-size: 24px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         #gameArea {
@@ -67,6 +79,8 @@
     </style>
 </head>
 <body>
+    <h1>FORTUNE TIGER PAULO</h1>
+
     <div>
         Banca: R$ <span id="bankAmount">0</span>
     </div>
